Adding lifecycle hooks and misc. clarifications.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -78,6 +78,8 @@
     "  - Angular CLI plus the main Angular libraries, including forms, routing, etc. etc.\n",
     "- **angular-in-memory-web-api**\n",
     "  - lets you mock an HTTP web server so you can write real HTTP code in your app but use hard-coded data localy\n",
+    "- **json-server**\n",
+    "  - lets you mock an HTTP web server using a json file instead of in-memory\n",
     "\n",
     "# Angular CLI\n",
     "\n",
@@ -400,6 +402,7 @@
     "### Overall Process\n",
     "\n",
     "1. When a triggering event occurs (user interaction event, observable emitting, http request completing, setTimeout lambda being called, etc.), run change detection process at top of tree (eg. parent component).\n",
+    "   - note that change detection runs **after the handlers** for events, so that you can change bindings in event handlers and have them reflect right away\n",
     "2. Check parent component for input binding changes or field changes. The exact checking depends on which strategy the component is configured to use.\n",
     "3. If any relevant change is found, mark the component dirty and check its children using their strategies, and so on.\n",
     "4. Call ngOnChanges for dirty components.\n",
@@ -453,7 +456,13 @@
     "\n",
     "A side effect of this is that APIs that aren't known to Zone.js will not trigger change detection.\n",
     "\n",
-    "Note that because of the way it's designed, there are **no cycles**. A binding change may cause a view change, but it won't feedback and cause more binding changes. Two-way binding in forms is designed to not cause a cycle.\n"
+    "Note that because of the way it's designed, there are **no cycles**. A binding change may cause a view change, but it won't feedback and cause more binding changes. Two-way binding in forms is designed to not cause a cycle.\n",
+    "\n",
+    "Note that there is an **injectable service** called **NgZone** that can be used to run code that is not in the Angular zone inside the Angular zone.\n",
+    "\n",
+    "`this.ngZone.run(() => { this.button.click(); });`\n",
+    "\n",
+    "This is usuaully used for handlers for 3rd party asynchronous libraries. You may have to run `changeDetectorRef.detectChanges()` within the same handler depending on the situation.\n"
    ]
   },
   {
@@ -717,6 +726,8 @@
     "[Step 5A: Moving heroes list to /heroes route.](https://github.com/davidpet/tutorials/commit/a81854fd85ae02aef6bb629075d427c9c91bd877) - adding routing (w/ _/heroes_ path) and moving component from main page into that route\n",
     "\n",
     "[Step 5B: Adding link button to route to /heroes.](https://github.com/davidpet/tutorials/commit/8d87114da07a22143611af0d639cc27e1e5db558) - routing via button\n",
+    "\n",
+    "- NOTE: `<nav>` tag is an HTML thing and not an Angular thing. See [here](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav)\n",
     "\n",
     "[Step 5C: Adding dashboard view.](https://github.com/davidpet/tutorials/commit/67b86eaf75a4098a24778a6b2e0cea543d41483d) - new component+route, default route\n",
     "\n",
@@ -1073,9 +1084,39 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4c771c36",
+   "metadata": {},
+   "source": [
+    "### Component Lifecycle Hooks\n",
+    "\n",
+    "You can see the list of hooks in order [here](https://angular.io/guide/lifecycle-hooks).\n",
+    "\n",
+    "The most important ones to keep in mind are:\n",
+    "\n",
+    "1. `ngOnInit` when the bindings are set.\n",
+    "2. `ngAfterContentInit` when content projection is done.\n",
+    "3. `ngAfterViewInit` when view children are bound.\n",
+    "4. `ngOnDestroy` when Angular is destroying the component (to let you clean up subscriptions, etc.).\n",
+    "5. `ngOnChanges` before `ngOnInit` and then over and over.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c0d30457",
+   "metadata": {},
+   "source": [
+    "### json-server\n",
+    "\n",
+    "Complete details are [here](https://angular.io/tutorial/first-app/first-app-lesson-14). You can `npm install` this package globally and run it on a json file to have it implement an HTTP server at a port on localhost that your app can talk to. That way you can mock the real HTTP service instead of having to use in-memory API.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b971c13f",
+   "id": "699bc1a3",
    "metadata": {},
    "outputs": [],
    "source": []
