Adding more misc. items.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -80,6 +80,12 @@
     "  - lets you mock an HTTP web server so you can write real HTTP code in your app but use hard-coded data localy\n",
     "- **json-server**\n",
     "  - lets you mock an HTTP web server using a json file instead of in-memory\n",
+    "- **uuid**\n",
+    "  - lets you generate unique IDs for things like form controls so that they don't clash with other components\n",
+    "- **@ngrx/\\***\n",
+    "  - ngrx state management, spread across multiple packages, with `ngrx/store` being the main one\n",
+    "  - in-memory app state (goes away on browser refresh)\n",
+    "    - store holding the state, actions dispatched to store, reducers changing the store based on actions, effects doing side effects based on actions\n",
     "\n",
     "# Angular CLI\n",
     "\n",
@@ -172,7 +178,16 @@
     "`export CHROME_BIN=/mnt/c/Program\\ Files\\ \\(x86\\)/Google/Chrome/Application/chrome.exe`\n",
     "\n",
     "- if `ng test` has trouble finding the Windows chrome on WSL in Windows, try this\n",
-    "- for me, it had trouble sometimes and not others, so I added this to my bashrc\n"
+    "- for me, it had trouble sometimes and not others, so I added this to my bashrc\n",
+    "\n",
+    "`ng serve --configuration=production`\n",
+    "\n",
+    "- `ng serve` and `ng test` both have an option to specify a non-default configuration, configured in _angular.json_.\n",
+    "\n",
+    "`ng build --configuration=production`\n",
+    "\n",
+    "- the official way to build a production-ready app to serve\n",
+    "- it is not recommened to use the one built by `ng serve` in production\n"
    ]
   },
   {
@@ -292,7 +307,13 @@
     "\n",
     "#### Resetting\n",
     "\n",
-    "`form.reset()` on Ngform will reset the state and values of the form. If the form was guraded by `*ngIf` and has two-way binding, this will probably just reset the state and the values will be correct. If the form was guarded by `[hidden]` instead, resetting will probably reset the values too, because change detection won't run if the form's inputs were not changed.\n"
+    "`form.reset()` on Ngform will reset the state and values of the form. If the form was guraded by `*ngIf` and has two-way binding, this will probably just reset the state and the values will be correct. If the form was guarded by `[hidden]` instead, resetting will probably reset the values too, because change detection won't run if the form's inputs were not changed.\n",
+    "\n",
+    "#### ID Uniqueness\n",
+    "\n",
+    "If an app is large and has the possibility of form ID clashes, you may want to generate unique IDs instead of hardcoding them. You can `npm install uuid` and then import `uuid.v4()` into the component TS file. Then call it to initialize a field for the ID of each form control.\n",
+    "\n",
+    "In the template, you can dynamically bind the `[id]` of the form control and the `[for]` of the label to this unique ID.\n"
    ]
   },
   {
@@ -463,6 +484,60 @@
     "`this.ngZone.run(() => { this.button.click(); });`\n",
     "\n",
     "This is usuaully used for handlers for 3rd party asynchronous libraries. You may have to run `changeDetectorRef.detectChanges()` within the same handler depending on the situation.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "604154de",
+   "metadata": {},
+   "source": [
+    "## NativeElement vs. DebugElement vs. ComponentInstance\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0ec2daf3",
+   "metadata": {},
+   "source": [
+    "You mostly see these come up in tests, but they also come up in component code (eg. when you use `ElementRef`).\n",
+    "\n",
+    "The test fixture can give you all of these things for the component under test, plus a lot more.\n",
+    "\n",
+    "`ComponentInstance` is the component class instantiated and attached to the DOM element.\n",
+    "\n",
+    "`NativeElement` is the JS DOM element that you can interact with the old-fashioned way. You can find its children with `nativeElement.querySelector()` and `nativeElement.querySelectorAll()`, using css selectors.\n",
+    "\n",
+    "`DebugElement` provides enhancements beyond native element, such as being able to query by directive in addition to css selectors.\n",
+    "\n",
+    "Here is an example of the syntax: `const element = debugElement.query(By.directive(MyComponent));`\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f47c99d8",
+   "metadata": {},
+   "source": [
+    "## Testing Minified Code\n",
+    "\n",
+    "Configurations such as minification, optimization, etc. are done via configurations in _angular.json_.\n",
+    "\n",
+    "By default, `ng serve` has a _development_ and _production_ configuration, defaulting to _development_. You can run production with `ng serve --configuration=production`.\n",
+    "\n",
+    "By default, `ng test` only has 1 configuration, so you'd have to make another and then run it with **--configuration** like above.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c2af8cbc",
+   "metadata": {},
+   "source": [
+    "## Libraries\n",
+    "\n",
+    "See [here](https://angular.io/guide/creating-libraries) for how to make shared libraries of components and directives. Basically, you make a workspace via `ng new` and then add one or more libraries to it with `ng generate library` and then to use that in an application, you have to `ng build` and `ng pack` it and then import as an `npm` package via a registry.\n"
    ]
   },
   {
@@ -1114,9 +1189,33 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "da1bd83f",
+   "metadata": {},
+   "source": [
+    "### HTTP Authentication\n",
+    "\n",
+    "See [here](https://angular.io/guide/http) for general information about how to modify HTTP headers in HTTPClient transparently.\n",
+    "\n",
+    "To implement authentication, you would implement OAuth 2.0 or similar yourself (there are 3rd party npm packages that can help) and then add the token into the headers in the interceptor for http requests.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "55c355ab",
+   "metadata": {},
+   "source": [
+    "### failOnFirstTestError\n",
+    "\n",
+    "By default, jasmine tests will continue after an `expect` fails so that you can see all the failures. If you don't want that to happen, you can set `failOnFirstTestError` in `angular.json`.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699bc1a3",
+   "id": "f8c7d22f",
    "metadata": {},
    "outputs": [],
    "source": []
