--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -543,6 +543,21 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "6e6525d7",
+   "metadata": {},
+   "source": [
+    "## Workspace\n",
+    "\n",
+    "The default way of creating an app as shown in tutorials creates a workspace that is tied to an app. It is also possible to create a workspace that can contain multiple apps, shared libraries, etc. in one workspace. This can streamline things like using a shared library without having to package first.\n",
+    "\n",
+    "You can also treat an existing app as a workspace and use `ng new application` inside to create more apps.\n",
+    "\n",
+    "When in the workspace in the shell, you would **specify the app name** to commands like `ng serve`.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "ee924548",
    "metadata": {},
    "source": [
