Adding HTML and CSS snippets for future rerference.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -1541,6 +1541,294 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "008be334",
+   "metadata": {},
+   "source": [
+    "# CSS\n",
+    "\n",
+    "This is a concise (relatively) CSS snippet I generated iteratively with ChatGPT as a reference.\n",
+    "\n",
+    "```css\n",
+    "/* Apply to all elements */\n",
+    "* {\n",
+    "  box-sizing: border-box;\n",
+    "}\n",
+    "\n",
+    "/* Tag selector */\n",
+    "body {\n",
+    "  font-family: Arial, sans-serif;\n",
+    "  background-color: #f0f0f0;\n",
+    "  margin: 0;\n",
+    "  padding: 0;\n",
+    "}\n",
+    "\n",
+    "/* ID selector */\n",
+    "#myButton {\n",
+    "  background-color: #008cba; /* Blue background */\n",
+    "  color: white; /* White text */\n",
+    "  border: none; /* No border */\n",
+    "  padding: 15px 32px; /* Padding */\n",
+    "  text-align: center; /* Centered text */\n",
+    "  text-decoration: none; /* No underline */\n",
+    "  display: inline-block;\n",
+    "  font-size: 16px;\n",
+    "  margin: 4px 2px;\n",
+    "  cursor: pointer; /* Pointer cursor on hover */\n",
+    "}\n",
+    "\n",
+    "/* Class selector */\n",
+    ".myClass {\n",
+    "  color: red;\n",
+    "}\n",
+    "\n",
+    "/* Descendant selector */\n",
+    "nav ul {\n",
+    "  list-style-type: none; /* No bullets */\n",
+    "  padding: 0;\n",
+    "}\n",
+    "\n",
+    "nav ul li {\n",
+    "  display: inline; /* Display inline */\n",
+    "  margin-right: 10px; /* Margin to the right */\n",
+    "}\n",
+    "\n",
+    "/* Child selector */\n",
+    "nav > ul {\n",
+    "  border-bottom: 1px solid #ccc;\n",
+    "}\n",
+    "\n",
+    "/* Adjacent sibling selector */\n",
+    "h1 + p {\n",
+    "  font-size: 1.2em;\n",
+    "}\n",
+    "\n",
+    "/* General sibling selector */\n",
+    "h1 ~ p {\n",
+    "  color: green;\n",
+    "}\n",
+    "\n",
+    "/* Attribute selector */\n",
+    "input[type=\"text\"] {\n",
+    "  padding: 5px;\n",
+    "  border-radius: 4px; /* Rounded borders */\n",
+    "  border: 1px solid #ccc;\n",
+    "}\n",
+    "\n",
+    "/* Pseudo-class selector */\n",
+    "a:hover {\n",
+    "  color: orange;\n",
+    "}\n",
+    "\n",
+    "/* Pseudo-element selector */\n",
+    "p::first-letter {\n",
+    "  font-size: 2em;\n",
+    "  color: red;\n",
+    "}\n",
+    "\n",
+    "/* Media query */\n",
+    "@media (max-width: 600px) {\n",
+    "  body {\n",
+    "    background-color: lightblue;\n",
+    "  }\n",
+    "}\n",
+    "```\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "71968ce5",
+   "metadata": {},
+   "source": [
+    "# FlexBox\n",
+    "\n",
+    "This is a concise Flexbox snippet generated with ChatGPT as a reference.\n",
+    "\n",
+    "```css\n",
+    "/* The container becomes a flex container, laying out its children in a row */\n",
+    ".container {\n",
+    "  display: flex;\n",
+    "}\n",
+    "\n",
+    "/* The children are laid out in a column instead of a row */\n",
+    ".container-column {\n",
+    "  display: flex;\n",
+    "  flex-direction: column;\n",
+    "}\n",
+    "\n",
+    "/* The children can wrap onto multiple lines if they run out of space in the container */\n",
+    ".container-wrap {\n",
+    "  display: flex;\n",
+    "  flex-wrap: wrap;\n",
+    "}\n",
+    "\n",
+    "/* Combines flex direction and wrap, laying out the children in a column and allowing them to wrap onto multiple lines */\n",
+    ".container-column-wrap {\n",
+    "  display: flex;\n",
+    "  flex-direction: column;\n",
+    "  flex-wrap: wrap;\n",
+    "}\n",
+    "\n",
+    "/* Horizontally aligns the children at the center of the container */\n",
+    ".container-justify-center {\n",
+    "  display: flex;\n",
+    "  justify-content: center;\n",
+    "}\n",
+    "\n",
+    "/* Horizontally distributes the children with equal space around them */\n",
+    ".container-justify-space-around {\n",
+    "  display: flex;\n",
+    "  justify-content: space-around;\n",
+    "}\n",
+    "\n",
+    "/* Horizontally distributes the children with equal space between them */\n",
+    ".container-justify-space-between {\n",
+    "  display: flex;\n",
+    "  justify-content: space-between;\n",
+    "}\n",
+    "\n",
+    "/* Vertically aligns the children at the center of the container */\n",
+    ".container-align-items-center {\n",
+    "  display: flex;\n",
+    "  align-items: center;\n",
+    "}\n",
+    "\n",
+    "/* Vertically aligns the children at the start of the container */\n",
+    ".container-align-items-start {\n",
+    "  display: flex;\n",
+    "  align-items: flex-start;\n",
+    "}\n",
+    "\n",
+    "/* Vertically aligns the children at the end of the container */\n",
+    ".container-align-items-end {\n",
+    "  display: flex;\n",
+    "  align-items: flex-end;\n",
+    "}\n",
+    "\n",
+    "/* Vertically distributes multiple lines of children with equal space around them */\n",
+    ".container-align-content-space-around {\n",
+    "  display: flex;\n",
+    "  flex-wrap: wrap;\n",
+    "  align-content: space-around;\n",
+    "}\n",
+    "\n",
+    "/* Allows a child to grow and take up remaining space in the container */\n",
+    ".item-flex-grow {\n",
+    "  flex-grow: 1;\n",
+    "}\n",
+    "\n",
+    "/* Allows a child to shrink if necessary to prevent overflow of the container. \"1\" means the item can shrink proportionally to its flex-shrink factor. */\n",
+    ".item-flex-shrink {\n",
+    "  flex-shrink: 1;\n",
+    "}\n",
+    "\n",
+    "/* Changes the order of a child. \"1\" means the item will appear after items with \"0\" or negative order, in source order. */\n",
+    ".item-order-1 {\n",
+    "  order: 1;\n",
+    "}\n",
+    "```\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3dcd6b7d",
+   "metadata": {},
+   "source": [
+    "# HTML\n",
+    "\n",
+    "This is a concise (relatively) HTML snippet I generated iteratively with ChatGPT as a reference.\n",
+    "\n",
+    "```html\n",
+    "<!DOCTYPE html>\n",
+    "<html lang=\"en\">\n",
+    "  <head>\n",
+    "    <meta charset=\"UTF-8\" />\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />\n",
+    "    <title>Your Web App</title>\n",
+    "    <style>\n",
+    "      body {\n",
+    "        font-family: Arial, sans-serif;\n",
+    "      }\n",
+    "    </style>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    <!-- Header section with the main heading -->\n",
+    "    <header>\n",
+    "      <h1>Welcome to Your Web App</h1>\n",
+    "    </header>\n",
+    "\n",
+    "    <!-- Navigation section -->\n",
+    "    <nav>\n",
+    "      <ul>\n",
+    "        <li><a href=\"#home\">Home</a></li>\n",
+    "        <li><a href=\"#about\">About</a></li>\n",
+    "      </ul>\n",
+    "    </nav>\n",
+    "\n",
+    "    <!-- Main content section -->\n",
+    "    <main>\n",
+    "      <!-- Home section with an image and a button -->\n",
+    "      <section id=\"home\">\n",
+    "        <h2>Home</h2>\n",
+    "        <div>\n",
+    "          <img\n",
+    "            src=\"path/to/your/image.jpg\"\n",
+    "            alt=\"Description of image\"\n",
+    "            width=\"500\"\n",
+    "            height=\"600\"\n",
+    "          />\n",
+    "          <button id=\"myButton\">Click Me!</button>\n",
+    "        </div>\n",
+    "        <p>Welcome home, <span id=\"userName\">Guest</span>!</p>\n",
+    "      </section>\n",
+    "\n",
+    "      <!-- About section -->\n",
+    "      <section id=\"about\">\n",
+    "        <h2>About</h2>\n",
+    "        <p>About us...</p>\n",
+    "      </section>\n",
+    "\n",
+    "      <!-- Form section -->\n",
+    "      <form id=\"myForm\">\n",
+    "        <label for=\"name\">Name:</label><br />\n",
+    "        <input type=\"text\" id=\"name\" name=\"name\" required /><br />\n",
+    "        <label for=\"email\">Email:</label><br />\n",
+    "        <input type=\"email\" id=\"email\" name=\"email\" required /><br />\n",
+    "        <label for=\"pwd\">Password:</label><br />\n",
+    "        <input type=\"password\" id=\"pwd\" name=\"pwd\" required /><br />\n",
+    "        <input type=\"submit\" value=\"Submit\" />\n",
+    "      </form>\n",
+    "    </main>\n",
+    "\n",
+    "    <!-- Footer section -->\n",
+    "    <footer>&copy; 2023 Your Web App</footer>\n",
+    "\n",
+    "    <!-- JavaScript section -->\n",
+    "    <script>\n",
+    "      // Prevent form from being submitted\n",
+    "      document\n",
+    "        .getElementById(\"myForm\")\n",
+    "        .addEventListener(\"submit\", function (event) {\n",
+    "          event.preventDefault();\n",
+    "          console.log(\"Form submission prevented.\");\n",
+    "        });\n",
+    "\n",
+    "      // Log a message when the button is clicked\n",
+    "      document\n",
+    "        .getElementById(\"myButton\")\n",
+    "        .addEventListener(\"click\", function (event) {\n",
+    "          console.log(\"Button clicked.\");\n",
+    "        });\n",
+    "    </script>\n",
+    "  </body>\n",
+    "</html>\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6562dac0",
