Updates from new things seen during stats course.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b2e692e",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "18553b07",
    "metadata": {},
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "74e41c5c",
    "metadata": {},
@@ -153,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c5eeb3cd",
    "metadata": {},
@@ -251,6 +255,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d80d99f8",
    "metadata": {},
@@ -315,6 +320,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc93a619",
    "metadata": {},
@@ -427,6 +433,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7dbb943c",
    "metadata": {},
@@ -501,6 +508,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b5b86c72",
    "metadata": {},
@@ -554,6 +562,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05d18547",
    "metadata": {},
@@ -607,6 +616,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45fe16b9",
    "metadata": {},
@@ -618,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "id": "bdc1de1c",
    "metadata": {},
    "outputs": [
@@ -665,7 +675,9 @@
       "file\n",
       "\n",
       "2\n",
-      "[1, 2]\n"
+      "[1, 2]\n",
+      "\n",
+      "bla\n"
      ]
     }
    ],
@@ -737,10 +749,26 @@
     "    yield 2\n",
     "\n",
     "\n",
-    "print(list(f()))"
+    "print(list(f()))\n",
+    "\n",
+    "# Match-case (new to 3.10)\n",
+    "# like a switch() in another language\n",
+    "print()\n",
+    "term = 'bla'\n",
+    "match term:\n",
+    "    case 'bla2':\n",
+    "        print('bla2')\n",
+    "        # Notice that it doesn't need break\n",
+    "        # because it doesn't fall-through\n",
+    "    case 'bla':\n",
+    "        print('bla')\n",
+    "    case _:\n",
+    "        #default case syntax\n",
+    "        print('default')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dbd4718e",
    "metadata": {},
@@ -788,6 +816,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3c171b54",
    "metadata": {},
@@ -838,6 +867,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7d603429",
    "metadata": {},
@@ -945,6 +975,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b576eb70",
    "metadata": {},
@@ -1054,6 +1085,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05b2cc0b",
    "metadata": {},
@@ -1105,6 +1137,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d11885f5",
    "metadata": {},
@@ -1143,6 +1176,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "02a95aab",
    "metadata": {},
@@ -1176,6 +1210,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "425726da",
    "metadata": {},
@@ -1276,6 +1311,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d35ccfc1",
    "metadata": {},
@@ -1308,6 +1344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "72747fd6",
    "metadata": {},
@@ -1361,6 +1398,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c3ffe452",
    "metadata": {},
@@ -1407,6 +1445,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b2dc8aa6",
    "metadata": {},
@@ -1551,6 +1590,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90feafef",
    "metadata": {},
@@ -1586,6 +1626,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f6445b2f",
    "metadata": {},
@@ -1650,6 +1691,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "263a3c35",
    "metadata": {},
@@ -1659,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "id": "b6b7f83d",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1719,12 @@
       "using triple double quotes.\n",
       "He said, \"Hello, World!\"\n",
       "He said, 'Hello, World!'\n",
-      "C:\\path\\to\\file\n"
+      "C:\\path\\to\\file\n",
+      "x = 5, y = 50\n",
+      "x = 5\n",
+      "\n",
+      "x = 5\n",
+      "\n"
      ]
     }
    ],
@@ -1705,16 +1752,61 @@
     "# Raw string (ignores escape characters)\n",
     "raw_string = r'C:\\path\\to\\file'\n",
     "\n",
+    "# Format quotes\n",
+    "format_quotes = f\"x = {3 + 2}, y = {30 + 20}\"\n",
+    "format_quotes_single = f'x = {3 + 2}'\n",
+    "format_quotes_multiline = f\"\"\"\n",
+    "x = {3 + 2}\n",
+    "\"\"\"\n",
+    "\n",
     "print(single_quoted)\n",
     "print(double_quoted)\n",
     "print(triple_single_quoted)\n",
     "print(triple_double_quoted)\n",
     "print(escaped_quotes)\n",
     "print(escaped_quotes_single)\n",
-    "print(raw_string)"
+    "print(raw_string)\n",
+    "print(format_quotes)\n",
+    "print(format_quotes_single)\n",
+    "print(format_quotes_multiline)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1ece0f22",
+   "metadata": {},
+   "source": [
+    "# Markdown (Jupyter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "73e5a24e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**hi** there"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "display(Markdown('**hi** there'))"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e05ffba0",
    "metadata": {},
@@ -1749,6 +1841,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "964f3d45",
    "metadata": {},
@@ -1796,6 +1889,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3937959f",
    "metadata": {},
@@ -1854,6 +1948,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "33249f38",
    "metadata": {},
@@ -1902,6 +1997,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5b13b77",
    "metadata": {},
