--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -698,9 +698,59 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "97ac38b6",
+   "metadata": {},
+   "source": [
+    "# Dataclass\n",
+    "\n",
+    "This is fairly new (Python 3.7).\n",
+    "\n",
+    "It allows you to skip defining a constructor just for the purpose of defining member variables for plain old data types.\n",
+    "\n",
+    "Check documentation for some sharp edges around **subclasses** and **custom constructor behavior**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3a541fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class MyClass:\n",
+    "    x: int  # required constructor arg\n",
+    "    y = 20  # optional constructor arg\n",
+    "\n",
+    "    def f(self):\n",
+    "        return self.x + self.y\n",
+    "\n",
+    "    # __init__ defined for you\n",
+    "    # has the member fields in order\n",
+    "    # ones with values are optional\n",
+    "\n",
+    "\n",
+    "m = MyClass(10)\n",
+    "print(m.f())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca50cee",
+   "id": "052e54a9",
    "metadata": {},
    "outputs": [],
    "source": []
