Adding example of project name and folder mismatch.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -1381,7 +1381,11 @@
     "\n",
     "[Adding info about karma execution UI](https://github.com/davidpet/tutorials/commit/1954187081d40cab877766d37ad45d77528adeb1)\n",
     "\n",
-    "[README notes about Environments](https://github.com/davidpet/tutorials/commit/bcb7e84972800d4e26251f6e2094fd8c069da6b3)\n"
+    "[README notes about Environments](https://github.com/davidpet/tutorials/commit/bcb7e84972800d4e26251f6e2094fd8c069da6b3)\n",
+    "\n",
+    "#### Followup\n",
+    "\n",
+    "[Example in Projects Repo](https://github.com/davidpet/projects/commit/1a59e019df541501bc2a5589a42786dbcb1119ff) - this commit shows an example of an app that's in a different folder than the name of the app in angular (which caused some finicky failures that I had to resolve here).\n"
    ]
   },
   {
